--- a/package.json
+++ b/package.json
@@ -1,19 +1,41 @@
 {
   "name": "jenkins-test",
   "version": "1.0.0",
-  "description": "Test Jenkins",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "start": "node .",
+    "check": "npm run lint && nsp check",
+    "test": "./node_modules/mocha/bin/mocha ./tests"
+  },
+  "dependencies": {
+    "compression": "^1.6.2",
+    "cors": "^2.5.2",
+    "dotenv": "^2.0.0",
+    "helmet": "^1.3.0",
+    "loopback": "^3.0.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-component-explorer": "^2.4.0",
+    "loopback-connector-mongodb": "^1.17.0",
+    "loopback-context": "^1.0.0",
+    "mailgun-js": "^0.7.13",
+    "serve-favicon": "^2.0.1",
+    "strong-error-handler": "^1.0.1",
+    "underscore": "^1.8.3",
+    "winston": "^2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "eslint": "^2.13.1",
+    "eslint-config-loopback": "^4.0.0",
+    "mocha": "^3.1.2",
+    "nsp": "^2.1.0",
+    "supertest": "^2.0.1"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/harispillai/jenkins-test.git"
+    "type": "",
+    "url": ""
   },
-  "author": "Hari S Pillai",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/harispillai/jenkins-test/issues"
-  },
-  "homepage": "https://github.com/harispillai/jenkins-test#readme"
+  "license": "UNLICENSED",
+  "description": "jenkins-test"
 }
